--- a/src/app/core/app.component.html
+++ b/src/app/core/app.component.html
@@ -1,1 +1,6 @@
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <h1><i class="fa-solid fa-scale-unbalanced-flip"></i> Currency Convert</h1>
+  </mat-toolbar-row>
+</mat-toolbar>
 <router-outlet></router-outlet>
