--- a/src/app/core/app.component.html
+++ b/src/app/core/app.component.html
@@ -3,4 +3,6 @@
     <h1><i class="fa-solid fa-scale-unbalanced-flip"></i> Currency Convert</h1>
   </mat-toolbar-row>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
